# DeToX

./: .gitignore  README.md  TestCalibrationAndRecording.py  Testing.py  demo1-test.csv  pyproject.toml
.github/workflows/: publish.yml
CalibrationStimuli/: README.md
DeToX/: Base.py  Calibration.py  Coords.py  ETSettings.py  Utils.py  __init__.py  calibration_config.py  coord_utils.py
DeToX.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Documentation/: _quarto.yml  index.qmd  objects.json  styles.scss
Documentation/Vignettes/: Calibration.qmd  GettingStarted.qmd  Installation.qmd
Documentation/api/: BaseCalibrationSession.qmd  ETSettings.AnimationSettings.qmd  ETSettings.CalibrationColors.qmd  ETSettings.CalibrationPatterns.qmd  ETSettings.UIElementSizes.qmd  ETracker.calibrate.qmd  ETracker.gaze_contingent.qmd  ETracker.get_gaze_position.qmd  ETracker.load_calibration.qmd  ETracker.qmd  ETracker.record_event.qmd  ETracker.save_calibration.qmd  ETracker.save_data.qmd  ETracker.set_eyetracking_settings.qmd  ETracker.show_status.qmd  ETracker.start_recording.qmd  ETracker.stop_recording.qmd  InfantStimuli.qmd  MouseCalibrationSession.qmd  NicePrint.qmd  TobiiCalibrationSession.qmd  _sidebar.yml  convert_height_to_units.qmd  (+8 more)
docs/: DeToX_website.Rproj  GettingStarted.qmd  _quarto.yml  index.html  index.qmd  objects.json  reference.qmd  search.json  styles.css
psydeto/: Base.py  coord_utils.py
tests/: GazeContingent_Test.py  General_Test.py  ReadHDF5_R.R  RecordRaw_Test.py  Record_Tobii.py  TestCalibration.py  basic_script_simulation.py  testCalibration.py
(+147 files in other folders)
