[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DeToX"
version = "0.1.0"
description = "Lightweight Python wrapper around tobii-researcher"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tobii-research",
    "psychopy",
]

authors = [
    { name = "Tommaso Ghilardi", email = "tommaso.ghilardi93@gmail.com" },
]

[tool.setuptools]
packages = ["DeToX"]
